--- a/spec/runner.html
+++ b/spec/runner.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Mocha</title>
+    <title>Find Similar Test Suite</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="lib/browser/mocha.css" />
     <script src="./lib/mocha.js"></script>
